# regex-tdfa

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  Setup.hs  regex-tdfa.cabal  stack.yaml
Data/IntMap/: CharMap.hs  CharMap2.hs  EnumMap.hs  EnumMap2.hs
Data/IntSet/: EnumSet.hs  EnumSet2.hs
Text/Regex/: TDFA.hs
Text/Regex/TDFA/: ByteString.hs  Common.hs  CorePattern.hs  IntArrTrieSet.hs  Live.hs  MutRun.hs  MutRunBS.hs  MutRunLBS.hs  MutRunSeq.hs  NewDFA.hs  Pattern.hs  ReadRegex.hs  Run.hs  RunBS.hs  RunLBS.hs  RunMutState.hs  RunSeq.hs  RunState.hs  Sequence.hs  String.hs  TDFA.hs  TNFA.hs  Wrap.hs
Text/Regex/TDFA/ByteString/: Lazy.hs
Text/Regex/TDFA/NewDFA/: Engine.hs  Engine_FA.hs  Engine_NC.hs  Engine_NC_FA.hs  Tester.hs
Text/Regex/TDFA/UNUSED/: RunBS.hs
doc/html/regex-tdfa/: Data-IntMap-CharMap2.html  Data-IntMap-EnumMap2.html  Data-IntSet-EnumSet2.html  Text-Regex-TDFA-ByteString-Lazy.html  Text-Regex-TDFA-ByteString.html  Text-Regex-TDFA-Common.html  Text-Regex-TDFA-CorePattern.html  Text-Regex-TDFA-IntArrTrieSet.html  Text-Regex-TDFA-NewDFA-Engine.html  Text-Regex-TDFA-NewDFA-Engine_FA.html  Text-Regex-TDFA-NewDFA-Engine_NC.html  Text-Regex-TDFA-NewDFA-Engine_NC_FA.html  Text-Regex-TDFA-NewDFA-MakeTest.html  Text-Regex-TDFA-NewDFA-Tester.html  Text-Regex-TDFA-NewDFA-Uncons.html  Text-Regex-TDFA-Pattern.html  Text-Regex-TDFA-ReadRegex.html  Text-Regex-TDFA-Sequence.html  Text-Regex-TDFA-String.html  Text-Regex-TDFA-TDFA.html  Text-Regex-TDFA-TNFA.html  Text-Regex-TDFA.html  doc-index.html  index.html  regex-tdfa.haddock
lib/Data/IntMap/: EnumMap2.hs
lib/Text/Regex/TDFA/: IntArrTrieSet.hs  String.hs  TNFA.hs
lib/Text/Regex/TDFA/NewDFA/: Engine.hs  Engine_FA.hs  Engine_NC_FA.hs  MakeTest.hs  Uncons.hs
test/: LICENSE  Main.hs
test/cases/: basic3.txt  class.txt  forced-assoc.txt  left-assoc.txt  nullsub3.txt  osx-bsd-critical.txt  repetition2.txt  right-assoc.txt  totest.txt
