Name:                   regex-tdfa
Version:                1.0.0
-- 0.99.4 tests pnonempty' = \ p -> POr [ PEmpty, p ] instead of PNonEmpty
-- 0.99.5 remove PNonEmpty constructor
-- 0.99.6 change to nested nonEmpty calls for PBound
-- 0.99.7 Use (PGroup Nothing) in Pattern to decompose PBound
-- 0.99.8 testing chaning Maximize to Minimize for Tags, decide (a*)* is canonical problem
-- 0.99.9 testing changing bestTrans/chooseWith/choose to include enterOrbit/newFlags/(_,True) info
-- 0.99.10 fixed ((.?)*)* patterns by changing PStar nullView when mayFirstBeNull
-- 0.99.11 improve above fix and make stuff work better -- HAS BUG, along with old TDFA!
-- 0.99.12 try to debug 0.99.11 : fixed updateWinner
-- 0.99.13 more cleanup
-- 0.99.14 start changing to the new real DFA
-- 0.99.15 get string with NewDFA testing, unit tests and 1000 random regex pass
-- 0.99.16 performance? up to v15
-- 0.99.17 radical removal of flag array and adding of SetVal to handle groups
-- 0.99.18 try alternate lazy/strict strategy in NewDFA.  Fix offset laziness.
-- 0.99.19 try for pre-comparison of orbit-logs!
-- 0.99.20 go to many vs single?
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2007, Christopher Kuklewicz
Author:                 Christopher Kuklewicz
Maintainer:             TextRegexLazy@personal.mightyreason.com
Stability:              Seems to work, but not POSIX yet
Homepage:               http://sourceforge.net/projects/lazy-regex
Package-URL:            http://darcs.haskell.org/packages/regex-unstable/regex-tdfa/
Synopsis:               Replaces/Enhances Text.Regex
Description:            A new all Haskell "tagged" DFA regex engine, inspired by libtre
Category:               Text
Tested-With:            GHC
Build-Depends:          regex-base >= 0.93.1, base >= 2.0, parsec, mtl, containers, array, bytestring,ghc-prim
Build-Type:             Simple
other-modules:          Paths_regex_tdfa
Exposed-Modules:        Text.Regex.TDFA.Common
                        Text.Regex.TDFA.IntArrTrieSet
                        Text.Regex.TDFA.TNFA
                        Text.Regex.TDFA.TDFA
                        Text.Regex.TDFA.Pattern
                        Text.Regex.TDFA.ReadRegex
                        Text.Regex.TDFA.CorePattern
                        Text.Regex.TDFA.NewDFA
                        Text.Regex.TDFA.String
                        Text.Regex.TDFA.ByteString
                        Text.Regex.TDFA.ByteString.Lazy
                        Text.Regex.TDFA.Sequence
                        Text.Regex.TDFA.Wrap
                        Text.Regex.TDFA
                        Data.IntSet.EnumSet2
                        Data.IntMap.EnumMap2
                        Data.IntMap.CharMap2
Buildable:              True
Extensions:             MultiParamTypeClasses, FunctionalDependencies, BangPatterns, MagicHash, RecursiveDo, NoMonoPatBinds, ForeignFunctionInterface, UnboxedTuples, TypeOperators, FlexibleContexts, ExistentialQuantification, UnliftedFFITypes, TypeSynonymInstances
GHC-Options:            -Wall -O2 -funbox-strict-fields
-- GHC-Options:            -Wall -O2
-- GHC-Options:            -Wall -ddump-minimal-imports
GHC-Prof-Options:       -auto-all
